# brukit

./: .codespellrc  .gitignore  .manifest.1  .program.in.example  CMakeLists.txt  Makefile  NAME  README  make.ps1
.hooks/: pre-commit.sh  prepare-commit-msg.sh
Documentation/: index.rst
commands/: corecmd.c  version.c
darwin/: fixinit.c  init.h
fixes/: build-add-brukit-manifest-in.patch  build-add-brukit-rc.patch  build-add-cherry-ico.patch  scripts-add-libkit-py.patch
include/: ascii.h  attr.h  ctype.h  i18n.h  iter.h  param.h  path.h  pathalt.h  pathalt_types.h  pathwalk.h  pathwalk_types.h  printf.h  strbuf.h  string.h  stringify.h  strlist.h  tercol.h  termas.h  types.h  udef.h  unicode.h  utf16.h  utf32.h  utf8.h  xcf.h
lib/: Kconfig.debug  Kconfig.feature  Kconfig.include  Kinclude.py  cmake.arch  cmake.features  cmake.kconfig  cmake.manifest  cmake.winsh
linux/: init.h
platfree/: ascii.c  atexit.c  fiter.c  gettext.c  i18n.c  levenshtein.c  param.c  param_help.c  path.c  pathalt.c  pathwalk.c  preinit.c  strbuf.c  string.c  strlist.c  strlist_readline.c  strtox.c  termas.c  udef.c  utf16.c  utf32.c  utf8.c
scripts/: build-locale.sh  bump-locale.sh  cc-feature.def  cc-feature.py  depconf.1  depconf.py  gen-utf16.py  init-consumer.sh  init-repo.sh  kconfig.py  kinclude.py  libkit.py  merge-fix.sh  merge-upstream.sh  merge.sh  reconfdep.py  setup-repo.ps1  setup-repo.sh  syncmo.sh  uniwidth.py  use-libkit.sh  use-posix-libkit.sh  (+1 more)
tests/param/: CMakeLists.txt  bit.c  bit.sh  choice.sh  cmdmode.sh  command.sh  number.sh  string.sh  switch.sh
(+60 files in other folders)
